# torchdcm

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
benchmarks/: compare_biogeme.py
datasets/: dataset_index.csv
datasets/large/: google_drive_links.csv
docs/: benchmarking.md
examples/: 01_multinomial_logit.ipynb  02_nested_logit.ipynb  03_cross_nested_logit.ipynb  04_mixed_logit.ipynb  05_wtp_space_mixed_logit.ipynb  06_scaled_multinomial_logit.ipynb  07_covariate_scaled_multinomial_logit.ipynb  08_ordered_logit.ipynb  09_ordered_probit.ipynb  10_latent_class_logit.ipynb  11_error_components_logit.ipynb  12_hybrid_choice.ipynb  13_panel_mixed_logit.ipynb  13_panel_multinomial_logit.ipynb  14_panel_multinomial_logit.ipynb  swissmetro_mnl.py
tests/: test_biogeme_parity.py  test_device.py  test_hybrid_choice.py  test_mnl.py  test_nested_logit.py  test_optimization.py  test_panel.py  test_reporting.py  test_wtp_mixed_logit.py
torchdcm/: __init__.py
torchdcm/data/: __init__.py  choice_dataset.py  ordered_dataset.py  panel.py
torchdcm/datasets/: __init__.py  london.py  swissmetro.py
torchdcm/inference/: __init__.py
torchdcm/models/: __init__.py  _optimization.py  covariate_scaled_mnl.py  cross_nested_logit.py  error_components.py  hybrid_choice.py  latent_class.py  mixed_logit.py  mnl.py  nested_logit.py  ordered.py  scaled_mnl.py  wtp_mixed_logit.py
torchdcm/results/: __init__.py  report.py  result.py
torchdcm/sklearn/: __init__.py  estimators.py
torchdcm/spec/: __init__.py  expressions.py  parameters.py  utility.py
