[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchdcm"
version = "0.1.0"
description = "PyTorch-first discrete choice model estimation with econometric inference."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Baichuan Mo"}]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "torch>=2.1",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
biogeme = ["biogeme>=3.2"]

[tool.setuptools.packages.find]
include = ["torchdcm*"]

