[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchdcm"
version = "0.1.0"
description = "PyTorch-first discrete choice model estimation with econometric inference."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Baichuan Mo"}]
keywords = [
    "discrete choice",
    "econometrics",
    "mixed logit",
    "multinomial logit",
    "pytorch",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "torch>=2.1",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/mbc96325/torchdcm"
Repository = "https://github.com/mbc96325/torchdcm"
Issues = "https://github.com/mbc96325/torchdcm/issues"
Benchmarks = "https://github.com/mbc96325/torchdcm-paper"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["torchdcm*"]
